--- a/SKGT.html
+++ b/SKGT.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+        <link rel = "stylesheet" href="menu.css">
+        <title>Web Giáo Dục</title>
+    </head>
+<body>
+    <div class="menu">
+        <ul class ="wrapper_menu">
+            <li class ="list_item"><a href="#">Sức Khỏe Giới Tính
+                <ul type=circle class ="dropdown">
+                    <li><a href="SKGT/pagehiv.php">HIV</li>
+                    <li><a href="SKGT/pagebenhlikhac.php">Bệnh Lí Khác</li>
+					          <li><a href="SKGT/pagettics.php">TT.ICS</li>
+				</ul>
+             </li>
+		</ul>
+	</div>
+</body>
+</html>
