--- a/menu.html
+++ b/menu.html
@@ -2,50 +2,52 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="CSS/mainmenu.css">
 </head>
 <body>
     <div class="logo"><a href="#"><img src="pic/thcv.jpg"></a></div>
-    <ul>
-        <li>
-            <a href="#">Trang chủ</a>
-        </li>
-        <li>
-            <a href="#">Phòng chống PBĐX</a>
-            <ul>
-                <li>
-                    <a href="#">Bạo lực học đường</a>
-                </li>
-                <li>
-                    <a href="#">SOGIESC</a>
-                </li>
-                
-            </ul>
-        </li>
-        <li>
-            <a href="#">Sức khỏe giới tính</a>
-            <ul>
-                <li>
-                    <a href="#">HIV</a>
-                </li>
-                <li>
-                    <a href="#">Các bệnh lí khác</a>
-                </li>
-            </ul>
-        </li>
-        <li>
-            <a href="#">Khác</a>
-            <ul>
-                <li>
-                    <a href="#">Viện iSEE</a>
-                </li>
-                <li>
-                    <a href="#">Trung tâm ICS</a>
-                </li>
-                <li>
-                    <a href="#">Các nguồn thông tin khác</a>
-                </li>
-            </ul>
-        </li>
-    </ul>
+    <div id="menu">
+        <ul>
+            <li>
+                <a href="#">Trang chủ</a>
+            </li>
+            <li>
+                <a href="pbdx.html">Phòng chống PBĐX</a>
+                <ul id="menucon">
+                    <li>
+                        <a href="blhd.html">Bạo lực học đường</a>
+                    </li>
+                    <li>
+                        <a href="sogie.html">SOGIESC</a>
+                    </li>
+            </li>
+                </ul>
+            <li>
+                <a href="skgt.html">Sức khỏe giới tính</a>
+                <ul id="menucon">
+                    <li>
+                        <a href="hiv.html">HIV</a>
+                    </li>
+                    <li>
+                        <a href="stis.html">Các bệnh lí khác</a>
+                    </li>                
+            </li>
+                </ul>
+            <li>
+                <a href="khac.html">Khác</a>
+                <ul id="menucon">
+                    <li>
+                        <a href="isee.html">Viện iSEE</a>
+                    </li>
+                    <li>
+                        <a href="ics.html">Trung tâm ICS</a>
+                    </li>
+                    <li>
+                        <a href="ttkhac.html">Các nguồn thông tin khác</a>
+                    </li>                
+            </li>
+                </ul>
+        </ul>
+    </div>
 </body>
 </html>
