--- a/blhd.html
+++ b/blhd.html
@@ -117,10 +117,10 @@ h1 {
 </div>
 
 <div class="w3-content w3-section" style="max-width:800px">
-  <img class="mySlides" src="blhd1" style="width:100%">
-  <img class="mySlides" src="blhd2" style="width:100%">
-  <img class="mySlides" src="blhd3" style="width:100%">
-  <img class="mySlides" src="blhd4" style="width:100%">
+  <img class="mySlides" src="pic/blhd1.jpg" style="width:100%">
+  <img class="mySlides" src="pic/blhd2.jpg" style="width:100%">
+  <img class="mySlides" src="pic/blhd3.jpg" style="width:100%">
+  <img class="mySlides" src="pic/blhd4.jpg" style="width:100%">
 </div>
 
 <script>
