--- a/sogie.html
+++ b/sogie.html
@@ -13,7 +13,7 @@
 <style>
 
 body {
-  background-image: url("ddg&td_background2");
+  background-image: url("pic/ddg&td_background.jpg");
 }
 
 .button {
