--- a/pbdx.html
+++ b/pbdx.html
@@ -1,1 +1,47 @@
 <!DOCTYPE html>
+<html>
+<head>
+
+<title>Phòng chống phân biệt đối xử</title>
+
+<meta charset="UTF-8">
+
+<link rel="stylesheet" type="text/css" href="CSS/pbdx.css" media="screen" />
+
+</head>
+<body>
+<div id="centerColumn">
+  <div id="header">
+    <h1>PHÒNG CHỐNG PHÂN BIỆT ĐỐI XỬ</h1>
+    <h2>Anti-discrimination</h2>
+	<img src="pic/pbdx.jpg" alt="Phòng chống phân biệt đối xử" width="800" height="1000">
+  </div>
+  <!--//end #headern//-->
+  
+  <h2>Phân biệt đối xử là gì?</h2>
+  <p>Phân biệt đối xử là hành vi tạo ra sự phân biệt một cách vô lý hoặc có lý giữa những con người với nhau dựa trên đặc điểm của nhóm, tầng lớp xã hội hay các đặc điểm xã hội khác mà cá nhân được cho là thuộc về. Phân biệt đối xử có thể dựa trên các cơ sở như giới tính, độ tuổi, thể hiện giới, quốc tịch, màu da, tôn giáo, sắc tộc, địa vị kinh tế, địa vị xã hội, ngôn ngữ, tầng lớp, nguồn gốc sinh thành, và những cơ sở khác... Phân biệt đối xử chủ yếu liên quan đến việc hạn chế, ngăn cản hoặc loại bỏ một cá nhân hay một nhóm với những cơ hội và đặc quyền mà những nhóm khác có được.</p>
+  <h2>Các dạng phân biệt đối xử</h2>
+  <ul>
+    <li>Phân biệt chủng tộc</li>
+    <li>Phân biệt giới tính</li>
+    <li>Phân biệt tuổi tác</li>
+    <li>Phân biệt vùng miền</li>
+	<li>Phân biệt văn hóa</li>
+	<li>Phân biệt giàu nghèo</li>
+	<li>Phân biệt ngôn ngữ</li>
+	<li>Phân biệt quốc  tịch</li>
+	<li>v.v...</li>
+  </ul>
+  <h2>TÔI BỊ NGƯỜI KHÁC KỲ THỊ VÀ PHÂN BIỆT ĐỐI XỬ, TÔI PHẢI LÀM GÌ?</h2>
+  <p>Kỳ thị là việc có suy nghĩ tiêu cực, hạ thấp giá trị về người khác vì họ thuộc một nhóm nào đó. Phân biệt đối xử là sự đối xử không công bằng với người khác vì bị coi là “khác biệt” với số đông. Phân biệt đối xử có thể dựa trên kỳ thị hoặc không.<br><br>Hiện tại Việt Nam chưa có luật chống phân biệt đối xử, những hành vi phân biệt đối xử được quy định trong từng luật cụ thể.<br><br>Nếu bạn bị phân biệt đối xử trong những trường hợp cụ thể (nhà trường, cơ sở y tế, việc làm...) thì có thể sử dụng các quy định pháp luật trong lĩnh vực đó. Nếu hành vi phân biệt đối xử không thể bị xử lý bởi quy định hiện hành, bạn vẫn có thể lên tiếng phản ánh trực tiếp, liên hệ báo chí truyền thông, các tổ chức bảo vệ quyền lợi của cộng đồng LGBT. Bạn có thể tìm trung tâm tư vấn phù hợp hoặc liên hệ <a href="https://www.isee.org.vn/">Viện iSEE</a> hoặc <a href="http://ics.org.vn/">trung tâm ICS</a> để trao đổi cụ thể hơn.</p>
+  <blockquote>
+    <p><strong>Hiến pháp 2013</strong><br>
+	<strong>Điều 16</strong><br>
+      1. Mọi người đều bình đẳng trước pháp luật.<br>2. Không ai bị phân biệt đối xử trong đời sống chính trị, dân sự, kinh tế, văn hóa, xã hội.</p>
+  </blockquote>
+  <div id="footer"> <a target="_blank" rel="nofollow">HTML</a> | <a target="_blank" rel="nofollow">CSS</a> | <a target="_blank" title="Trường học cầu vồng">THCV</a> | <a target="_blank" rel="nofollow" >Design by Tuan Khanh</a> </div>
+  <!--//end #footer//-->
+</div>
+<!--//end #centerColumn//-->
+</body>
+</html>
