--- a/stis.html
+++ b/stis.html
@@ -3,7 +3,7 @@
 <head>
     <title></title>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="CSS/mainmenu.css">
+    <link rel="stylesheet" type="text/css" href="CSS/stis.css">
 </head>
 <body>
     <header>
