--- a/menu.html
+++ b/menu.html
@@ -34,7 +34,7 @@
             </li>
                 </ul>
             <li>
-                <a href="khac.html">Khác</a>
+                <a href="ttkhac.html">Khác</a>
                 <ul id="menucon">
                     <li>
                         <a href="isee.html">Viện iSEE</a>
