--- a/ics.html
+++ b/ics.html
@@ -2,9 +2,9 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="CSS/mainmenu.css">
+    <link rel="stylesheet" type="text/css" href="CSS/ics.css">
 </head>
-    div id="content">
+    <div id="content">
     <h3><a href="ics.html">Trung tâm ICS</a></h3> 
     <p>
      Trung tâm <a href="http://ics.org.vn">ICS</a> có tiền thân là một dự án hướng đến hình ảnh tích cực về người LGBT+ tại Việt Nam của viện <a href="https://www.isee.org.vn">iSEE</a><br>
