--- a/sogie.html
+++ b/sogie.html
@@ -2,117 +2,18 @@
 <html>
 <head>
 
+<title>Đa dạng giới và tính dục</title>
+
 <meta charset="UTF-8">
 
-<title>Đa dạng giới và tính dục</title>
+<link rel="stylesheet" type="text/css" href="CSS/sogie.css" media="screen" />
 
 <!-- Chèn icon -->
 <meta name='viewport' content='width=device-width, initial-scale=1'>
 <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
 
-<style>
-
-body {
-  background-image: url("pic/ddg&td_background.jpg");
-}
-
-.button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 16px 45px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 20px;
-  margin: 4px 10px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-}
-
-.button1 {
-  background-color: white; 
-  color: black; 
-  border: 2px solid #4CAF50;
-  border-radius: 12px;
-}
-
-.button1:hover {
-  background-color: #4CAF50;
-  color: white;
-}
-
-.button2 {
-  background-color: white; 
-  color: black; 
-  border: 2px solid #008CBA;
-  border-radius: 12px;
-}
-
-.button2:hover {
-  background-color: #008CBA;
-  color: white;
-}
-
-.button3 {
-  background-color: white; 
-  color: black; 
-  border: 2px solid #f44336;
-  border-radius: 12px;
-}
-
-.button3:hover {
-  background-color: #f44336;
-  color: white;
-}
-
-.button4 {
-  background-color: white;
-  color: black;
-  border: 2px solid #e7e7e7;
-  border-radius: 12px;
-}
-
-.button4:hover {background-color: #e7e7e7;}
-
-.button5 {
-  background-color: white;
-  color: black;
-  border: 2px solid #555555;
-  border-radius: 12px;
-}
-
-.button5:hover {
-  background-color: #555555;
-  color: white;
-}
-
-div {
-  border: 2px solid gray;
-  padding: 8px;
-  font-family: Tahoma, Verdana, sans-serif;
-}
-
-h1 {
-  font-family: Arial, sans-serif;
-  color: red;
-}
-
-h3 {
-  text-align: center;
-  text-transform: uppercase;
-  color: #4CAF50;
-}
-
-p {
-  text-indent: 50px;
-  text-align: justify;
-  letter-spacing: 2px;
-  font-size: 16px;
-}
-
-</style>
 </head>
+
 <body>
 
 	
@@ -136,42 +37,8 @@ onclick="myFunction5()">E</button>
 
 <p id="demo"></p>
 
-<script>
-function myFunction1() {
-  document.getElementById("demo").innerHTML = "Sexuality (tính dục): Một khái niệm bao gồm giới tính sinh học (có cơ thể là nam hay nữ), bản dạng giới (cảm nhận mình là nam hay nữ), xu hướng tính dục (yêu người cùng giới hay khác giới) và thể hiện giới (thể hiện namtính hay nữ tính), vân vân. Tính dục khác với tình dục.";
-  document.getElementById("demo").style.fontSize = "25px"; 
-  document.getElementById("demo").style.color = "black";
-  document.getElementById("demo").style.backgroundColor = "#4CAF50";
-}
-
-function myFunction2() {
-  document.getElementById("demo").innerHTML = "Sexual Orientation (xu hướng tính dục):  Một yếu tố trong tính dục, thể hiện ở sự hấp dẫn có tính bền vững về cảm xúc, tình dục hoặc tình cảm hướng tới người cùng giới, khác giới hay cả hai. Từ đó có các xu hướng như đồng tính, dị tính hoặc song tính... Xu hướng tính dục của một người không nhất thiết trùng với hành vi tình dục của người đó. (Từ khác: khuynh hướng tính dục, thiên hướng tính dục)";
-  document.getElementById("demo").style.fontSize = "25px"; 
-  document.getElementById("demo").style.color = "black";
-  document.getElementById("demo").style.backgroundColor = "#008CBA";
-}
-
-function myFunction3() {
-  document.getElementById("demo").innerHTML = "Gender: giới tính xã hội được xác định theo cấu trúc xã hội thông thường, các hành vi, vai trò khác nhau trong xã hội theo thời gian. Gender thường được phân thành: nam, nữ hoặc không thuộc hai nhóm trên-nonbinary.";
-  document.getElementById("demo").style.fontSize = "25px"; 
-  document.getElementById("demo").style.color = "white";
-  document.getElementById("demo").style.backgroundColor = "#f44336";
-}
-
-function myFunction4() {
-  document.getElementById("demo").innerHTML = "Gender Identity (bản dạng giới): Một yếu tố trong tính dục, thể hiện ở cảm nhận về giới tính của một người. Bản dạng giới không nhất thiết phải trùng với giới tính sinh học. Bản dạng giới cũng độc lập với xu hướng tính dục, vì bản dạng giới liên quan tới việc một người nghĩ mình thuộc giới tính nào, còn xu hướng tính dục liên quan tới việc một người cảm thấy hấp dẫn với ai. (Từ khác: nhân dạng giới)";
-  document.getElementById("demo").style.fontSize = "25px"; 
-  document.getElementById("demo").style.color = "black";
-  document.getElementById("demo").style.backgroundColor = "#e7e7e7";
-}
-
-function myFunction5() {
-  document.getElementById("demo").innerHTML = "Gender Expression (Thể hiện giới): Là cách mà một người thể hiện giới tính xã hội của mình thông qua hành vi cư xử, cách ăn mặc, giọng nói và những đặc điểm khác. Xã hội nhìn nhận những dấu hiệu này để phân loại giữa giới tính nam hoặc nữ, mặc dù cách đánh giá nam hay nữ cũng được thay đổi theo thời gian và theo văn hoá địa phương.";
-  document.getElementById("demo").style.fontSize = "25px"; 
-  document.getElementById("demo").style.color = "white";
-  document.getElementById("demo").style.backgroundColor = "#555555";
-}
-</script>
-
 </body>
+
+<script src="JS/sogie.js”></script>
+
 </html>
